@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST ganglia-web-3.5.2.tar.gz 1471659 SHA256 3ca6985bc79e49be36d7a43114ec414b844629da8c15362aeb8c6339e97bbf23 SHA512 8f4a9bab51a4a6556cc805b1a50accbea4bdbb1a40830ac1003218c90b30bc9299ce66a8802bdadbbc71f24005e662c6055ecedf6b4d5f3fdd81f6173f7fc208 WHIRLPOOL 3c36471337fb0b63744d05a16f71ba0deebc33af9b59d44b8059c6dd6410b2bd552a2f190ad90ed936eafe3f33833861f3998ce09e61e534b6642c6d136b548a
+DIST ganglia-web-3.5.4.tar.gz 1486249 SHA256 a6e84622f89617da4d2236d8cc6adb1aee00bebf04c34fe46bd032a2d3e3354c SHA512 15caed9180961e8eb0790e79daea1f2a5eca630735655a03988236d2040deb5f418291722dba311382be762507e48a3f1763e5389ec2f0289564eef7ac7f925f WHIRLPOOL 42b2740ebe2f45e810cbf5f3efac5850ed68c0e3641ca6b2172ddb257a8e03ab80882a6e55a5296004a5cf2db3caa49d1de93230a068b3a28c840b4c50a825ec
 EBUILD ganglia-web-3.5.2.ebuild 1142 SHA256 37b32955c60a9dd3612eaa48d8eaf9af4f16e86781c84d8f03b77207e1f42108 SHA512 a2e3d78d97c091fe19c16ae94e2f1ae1c999d5406eaa35bdf3f48f152135f877d554c111f4d4ba198e36baa9ab125c42c790adb4cf690a684bd5b4c0d75cad0c WHIRLPOOL e8dd190a12f63a7e1295f95d9fb8574b11a58507c3a0c6fb156fcd57fde748491fe099cd897eae048e0585353aa9c0074f3970c8797bfde7e7b67e5e2cf618f6
-MISC ChangeLog 766 SHA256 239b5c3487d2ffd98c4fc559cff49b5952824e9447288bb8aba450719de1e28d SHA512 c265c4ec440fcdb9edc4ddaf185c52131a44d031fc05c8d397bd8852b3dcb642db00368b7046e804c33614290e063a373eb312da4c657ba17f25edaee861150b WHIRLPOOL ee174d7b30a8f826ade6b67ebee81e027c28930ae87aed8bffe62649a81f3c0abe8f8e6d62314e75f48081ccdc6dda3a03e8a464762e69ff4c9def75a632edd4
+EBUILD ganglia-web-3.5.4.ebuild 1146 SHA256 0db7ed473c053b8a6cf442b96a016193ac1fefac6a15a1cf82914bc20ee01f2d SHA512 00600b103c2b16dd6f280828eb655e1f5215760331f4747987c6654739f3de99ad4c437747613a58e2ffeda315b86c1efe36bb3cc8d56c9e317fb5d3cf634db9 WHIRLPOOL 5dd7600874adf3d338b812b76073a689d57e889cc49d5d73a7e7daa89ed9b81033385197b0acdf8b46a1f670936ff474f989154f48a3a12339f3e08a912025b9
+MISC ChangeLog 907 SHA256 d5a37f1e0335c386a58ebbbe8f051dbe1edd1d97b450e78b7e1fc311f81641dd SHA512 e655b3b58b1579acb6ff21af92be62ad919feb0abc2a634de0b13dce9ef4037b5559e7375a386eb31314d91e1ec8df4478513319e47236a1a3d891ea0b90e5e2 WHIRLPOOL 5454212ef41fc306ae83a52259a10f50f9afe5512fd4e96618c62d994ee2b9fafa4ad04f3b5f841b660d716a5487698efda783bcedbd2280b054fed1a33abd77
 MISC metadata.xml 228 SHA256 867e2c9cf08802c1ae7c8a1e84fafa792a531488dc15c7e8efd5596b33465d30 SHA512 ced4d7a8792403fe33b4500e75af897dfda1997dbea848fb4c699555e8d1fcad08f54b7c446ecc35306d025edde55d151d89c5e6ba7dba2244854637d4248d28 WHIRLPOOL d3195ff37ccca6b73e2b576c08e70cb057f222608b072b4ce5852522447cd9659d3b86a94a10b97635e82194b41d0f60715ac81cb336d8f4919b914738b1f3ef
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAlBdwisACgkQl5yvQNBFVTXF4ACfSgYw61moQcW1Yrhnz3c0zqV6
-rVsAnRWdswm7tH9rDTjfIo0KRpDMBswe
-=m1K1
+iEYEAREIAAYFAlEWil4ACgkQ4MrvBE1wQ8nBcQCePLtGjJlxMIP3YZn4CSfdEOQZ
+PtQAn1O1dA/cjP2e0cxbQA2WDRb2oWRb
+=7YXD
 -----END PGP SIGNATURE-----
