@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/ganglia-web
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia-web/ChangeLog,v 1.4 2012/09/22 13:50:30 blueness Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/ganglia-web/ChangeLog,v 1.5 2013/02/09 17:41:43 jsbronder Exp $
+
+*ganglia-web-3.5.4 (09 Feb 2013)
+
+  09 Feb 2013; Justin Bronder <jsbronder@gentoo.org> +ganglia-web-3.5.4.ebuild:
+  Version bump (#453128)
 
   22 Sep 2012; Anthony G. Basile <blueness@gentoo.org>
   ganglia-web-3.5.2.ebuild:
